tests/analyze/mixed-int-float/analyze.snap
---
source: tests/analyze.rs
expression: output
---
error: Type mismatch: expected `int`, but found `float`.
> 1 | def bad-add = 1 + 2.0
                        ^^^

error: Type mismatch: expected `int`, but found `float`.
> 2 | def bad-cmp = 1 < 2.0
                        ^^^

